# halolib

./: README.md  processor.py
halolib/: CMakeLists.txt
halolib/inc/: TRestHaloEvent.h  TRestHaloMetadata.h  TRestHaloTrimProcess.h
halolib/src/: TRestHaloEvent.cxx  TRestHaloMetadata.cxx  TRestHaloTrimProcess.cxx
halolib/test/: TRestHaloEvent_test.cxx  TRestHaloTrimProcess_test.cxx
